LAYOUT / Fix font size and spacing between sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,7 +59,7 @@ h2{
     font-family: "Playfair Display", serif;
   }
   h2{
-    font-size: calc(48px + 0.690625vw);
+    font-size: calc(40px + 0.690625vw);
     font-family: "Playfair Display", serif;
   }
 }
