--- a/src/sections/portfolio/portfolio.module.css
+++ b/src/sections/portfolio/portfolio.module.css
@@ -1,5 +1,4 @@
 .section {
-    min-height: 100vh;
     margin: 10px 10px;
     padding: 0 5%;
   }
